# traumst-api

./: .env-template  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  github-runner.service  main.db  main.db-shm  main.db-wal  nginx.conf  nginx.conf.template  run.sh  rustc-ice-2023-09-09T09:39:34.380808Z-52893.txt  setup.sh
.github/workflows/: deploy.yml
chat/: Cargo.toml  README.md  lib.rs  model.rs
src/: api.rs  config.rs  main.rs  server.rs
src/api/: handler.rs  mod.rs  response.rs  router.rs
src/api/handler/: chat.rs  email.rs  user.rs
src/api/model/: auth.rs  mod.rs  user.rs
src/api/process/: auth.rs  email.rs  mod.rs  user.rs
src/api/route/: email.rs  mod.rs  user.rs
src/api/router/: chat.rs  email.rs  user.rs
src/chat/: mod.rs
src/chat/model/: auth.rs  chat.rs  mod.rs  user.rs
src/database/: mod.rs  user.rs
src/email/: mod.rs
src/infra/: cache.rs  email.rs  logger.rs  mod.rs
src/request/: mod.rs
src/response/: mod.rs
src/router/: handler.rs  mod.rs
src/server/: mod.rs  response.rs
src/server/api/: mod.rs
src/server/api/process/: email.rs  mod.rs  user.rs
src/server/api/route/: user.rs
src/server/response/: mod.rs
src/server/router/: email.rs  handler.rs  mod.rs  user.rs
src/server/router/routes/: email.rs  mod.rs  user.rs
