[lib]
path = "lib.rs"

[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "macros"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"